# rusqdoltlite

./: Cargo.toml  README.md  codecov.yml
.github/workflows/: main.yml
libdoltlite-sys/: Cargo.toml  build.rs  upgrade.sh  upgrade_sqlcipher.sh
libdoltlite-sys/doltlite/: bindgen_bundled_version.rs  bindgen_bundled_version_ext.rs  doltlite.h  doltliteext.h
libdoltlite-sys/src/: lib.rs
src/: busy.rs  inner_connection.rs  lib.rs  pragma.rs  statement.rs  transaction.rs
src/types/: from_sql.rs  mod.rs  to_sql.rs
tests/: doltlite_backend.rs
